// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Banners|AlertBanner default 1`] = `
<section
  className="sc-bxivhb eMtVEh"
>
  <div
    className="sc-EHOje jtyqUw"
  >
    <p>
      alert text
      <button
        className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-raised-15 sc-ifAKCX bqdATS sc-bdVaJa eKQRDg"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-2 label"
        >
          button text
        </span>
      </button>
    </p>
  </div>
</section>
`;

exports[`Storyshots Banners|ErrorSuccessBanner error 1`] = `
<div
  className="sc-gzVnrw avLPF"
  color="#C1363F"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-30 root styled-icon sc-VigVT bkqdLp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    error
  </div>
  <button
    className="MuiButtonBase-root-65 MuiButton-root-39 MuiButton-contained-50 MuiButton-raised-53 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-40 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-30 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Banners|ErrorSuccessBanner success 1`] = `
<div
  className="sc-gzVnrw dHKoqK"
  color="#5DBA9C"
>
  <div
    className="sc-htoDjs kYYNpa"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-68 root styled-icon sc-gqjmRU kVDmhf"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-iwsKbI dwDcyq"
  >
    success
  </div>
  <button
    className="MuiButtonBase-root-103 MuiButton-root-77 MuiButton-contained-88 MuiButton-raised-91 sc-dnqmqq ibEVtO sc-bdVaJa eKQRDg"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-78 label"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-68 root styled-icon sc-gZMcBi fwoZLL"
        focusable="false"
        role="presentation"
        viewBox="0 0 500 500"
      >
        <path
          clipRule="evenodd"
          d="M483 456.3L275.7 249 483 41.7 456.3 15 249 222.3 41.7 15 15 41.7 222.3 249 15 456.3 41.7 483 249 275.7 456.3 483z"
          fillRule="evenodd"
        />
      </svg>
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Buttons|BaseButton default 1`] = `
<button
  className="MuiButtonBase-root-132 MuiButton-root-106 MuiButton-contained-117 MuiButton-raised-120 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-107 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-135 root styled-icon sc-iRbamj jYQInW"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|FlatIconButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-178 MuiButton-root-152 MuiButton-contained-163 MuiButton-raised-166 sc-bZQynM jlZJzO sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-153 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-181 root styled-icon sc-jlyJG kXwwmw"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|GhostButton default 1`] = `
<button
  className="MuiButtonBase-root-216 MuiButton-root-190 MuiButton-contained-201 MuiButton-raised-204 sc-jzJRlG hTvvkz sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-191 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-219 root styled-icon sc-gipzik jQsqU"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|IconButton default 1`] = `
<button
  className="MuiButtonBase-root-234 MuiIconButton-root-228"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiIconButton-label-233"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-237 root styled-icon sc-csuQGl dTkLFy"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-246"
  />
</button>
`;

exports[`Storyshots Buttons|IconButton disabled 1`] = `
<button
  className="MuiButtonBase-root-259 MuiButtonBase-disabled-260 MuiIconButton-root-253 MuiIconButton-disabled-257"
  disabled={true}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
  type="button"
>
  <span
    className="MuiIconButton-label-258"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-262 root styled-icon sc-Rmtcm cZIPlU"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots Buttons|PrimaryButton default 1`] = `
<button
  className="MuiButtonBase-root-297 MuiButton-root-271 MuiButton-contained-282 MuiButton-raised-285 sc-jTzLTM lcwPIJ sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-272 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-300 root styled-icon sc-bRBYWo hDCvzT"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|SecondaryButton default 1`] = `
<button
  className="MuiButtonBase-root-335 MuiButton-root-309 MuiButton-contained-320 MuiButton-raised-323 sc-fjdhpX dQkZpA sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-310 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-338 root styled-icon sc-hzDkRC iPnNXs"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TextButton default 1`] = `
<button
  className="MuiButtonBase-root-373 MuiButton-root-347 MuiButton-contained-358 MuiButton-raised-361 sc-htpNat fzSZoe sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-348 label"
  >
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Buttons|TooltipButton default 1`] = `
<button
  aria-describedby={null}
  className="MuiButtonBase-root-410 MuiButton-root-384 MuiButton-contained-395 MuiButton-raised-398 sc-bdVaJa eKQRDg"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  title="tooltip text"
  type="button"
>
  <span
    className="MuiButton-label-385 label"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-413 root styled-icon sc-jhAzac hxAoBp"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
      />
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
    </svg>
    LABEL TEXT
  </span>
</button>
`;

exports[`Storyshots Cards|BaseCard default 1`] = `
<div
  className="MuiPaper-root-423 MuiPaper-elevation1-426 MuiPaper-rounded-424 MuiCard-root-422 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    card text
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard image 1`] = `
<div
  className="MuiPaper-root-479 MuiPaper-elevation1-482 MuiPaper-rounded-480 MuiCard-root-478 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Cards|BaseCard title 1`] = `
<div
  className="MuiPaper-root-451 MuiPaper-elevation1-454 MuiPaper-rounded-452 MuiCard-root-450 card sc-cSHVUG dvYpwr"
  color="#310078"
>
  <div
    style={
      Object {
        "padding": "1rem",
      }
    }
  >
    <h1
      className="sc-kAzzGY dFlnQs"
    >
      card text
    </h1>
  </div>
</div>
`;

exports[`Storyshots Checkbox|Checkbox default 1`] = `
<span
  className="MuiButtonBase-root-522 MuiIconButton-root-516 MuiPrivateSwitchBase-root-512 MuiCheckbox-root-506 MuiPrivateSwitchBase-checked-513 MuiCheckbox-checked-507"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-521"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-525"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
    <input
      checked={true}
      className="MuiPrivateSwitchBase-input-515"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-534"
  />
</span>
`;

exports[`Storyshots Checkbox|Checkbox disabled 1`] = `
<span
  className="MuiButtonBase-root-592 MuiButtonBase-disabled-593 MuiIconButton-root-586 MuiIconButton-disabled-590 MuiPrivateSwitchBase-root-582 MuiCheckbox-root-576 MuiCheckbox-colorSecondary-581 MuiPrivateSwitchBase-disabled-584 MuiCheckbox-disabled-578"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="-1"
>
  <span
    className="MuiIconButton-label-591"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-595"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-585"
      data-indeterminate={false}
      disabled={true}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
</span>
`;

exports[`Storyshots Checkbox|Checkbox unchecked 1`] = `
<span
  className="MuiButtonBase-root-557 MuiIconButton-root-551 MuiPrivateSwitchBase-root-547 MuiCheckbox-root-541 MuiCheckbox-colorSecondary-546"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-556"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-560"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
      />
    </svg>
    <input
      checked={false}
      className="MuiPrivateSwitchBase-input-550"
      data-indeterminate={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
      value="value"
    />
  </span>
  <span
    className="MuiTouchRipple-root-569"
  />
</span>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel default 1`] = `
<div
  className="MuiPaper-root-608 MuiPaper-elevation1-611 MuiExpansionPanel-root-604 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-641 MuiExpansionPanelSummary-root-635"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-639"
    >
      <p
        className="MuiTypography-root-644 MuiTypography-body2-652"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-641 MuiIconButton-root-680 MuiExpansionPanelSummary-expandIcon-640"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-685"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-686 root styled-icon sc-fBuWsC bRMrID"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-700"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-695 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-697"
    >
      <div
        className="MuiCollapse-wrapperInner-698"
      >
        <div
          className="MuiExpansionPanelDetails-root-699"
        >
          <p
            className="MuiTypography-root-644 MuiTypography-body2-652"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel disabled 1`] = `
<div
  className="MuiPaper-root-917 MuiPaper-elevation1-920 MuiExpansionPanel-root-913 MuiExpansionPanel-disabled-916 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-950 MuiButtonBase-disabled-951 MuiExpansionPanelSummary-root-944 MuiExpansionPanelSummary-disabled-947"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="MuiExpansionPanelSummary-content-948"
    >
      <p
        className="MuiTypography-root-953 MuiTypography-body2-961"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-950 MuiButtonBase-disabled-951 MuiIconButton-root-989 MuiIconButton-disabled-993 MuiExpansionPanelSummary-expandIcon-949"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="-1"
    >
      <span
        className="MuiIconButton-label-994"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-995 root styled-icon sc-eqIVtm dGcIZO"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-1004 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-1006"
    >
      <div
        className="MuiCollapse-wrapperInner-1007"
      >
        <div
          className="MuiExpansionPanelDetails-root-1008"
        >
          <p
            className="MuiTypography-root-953 MuiTypography-body2-961"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel expanded 1`] = `
<div
  className="MuiPaper-root-814 MuiPaper-elevation1-817 MuiExpansionPanel-root-810 MuiExpansionPanel-expanded-812 expanded sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={true}
    className="MuiButtonBase-root-847 MuiExpansionPanelSummary-root-841 MuiExpansionPanelSummary-expanded-842"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-845 MuiExpansionPanelSummary-expanded-842"
    >
      <p
        className="MuiTypography-root-850 MuiTypography-body2-858"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-847 MuiIconButton-root-886 MuiExpansionPanelSummary-expandIcon-846 MuiExpansionPanelSummary-expanded-842"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-891"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-892 root styled-icon sc-dVhcbM hCcFYb"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-906"
      />
    </div>
  </div>
  <div
    className="MuiCollapse-container-901 collapse-container MuiCollapse-entered-902"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-903"
    >
      <div
        className="MuiCollapse-wrapperInner-904"
      >
        <div
          className="MuiExpansionPanelDetails-root-905"
        >
          <p
            className="MuiTypography-root-850 MuiTypography-body2-858"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel no expand icon 1`] = `
<div
  className="MuiPaper-root-1013 MuiPaper-elevation1-1016 MuiExpansionPanel-root-1009 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-1046 MuiExpansionPanelSummary-root-1040"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    style={
      Object {
        "flexBasis": "33.33%",
        "flexShrink": 0,
        "fontSize": "1.6rem",
      }
    }
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-1044"
    >
      <p
        className="MuiTypography-root-1049 MuiTypography-body2-1057"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-1085 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-1087"
    >
      <div
        className="MuiCollapse-wrapperInner-1088"
      >
        <div
          className="MuiExpansionPanelDetails-root-1089"
        >
          <p
            className="MuiTypography-root-1049 MuiTypography-body2-1057"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpansionPanel|ExpansionPanel secondary text 1`] = `
<div
  className="MuiPaper-root-711 MuiPaper-elevation1-714 MuiExpansionPanel-root-707 sc-chPdSV bpjWMt"
>
  <div
    aria-expanded={false}
    className="MuiButtonBase-root-744 MuiExpansionPanelSummary-root-738"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-742"
    >
      <p
        className="MuiTypography-root-747 MuiTypography-body2-755"
        style={
          Object {
            "flexBasis": "33.33%",
            "flexShrink": 0,
            "fontSize": "1.6rem",
          }
        }
      >
        Expansion Panel
      </p>
      <p
        className="MuiTypography-root-747 MuiTypography-body2-755"
        style={
          Object {
            "color": "#777",
            "fontSize": "1.6rem",
          }
        }
      >
        Lorem ipsum dolor sit amet consectetur
      </p>
    </div>
    <div
      aria-hidden="true"
      className="MuiButtonBase-root-744 MuiIconButton-root-783 MuiExpansionPanelSummary-expandIcon-743"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-788"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-789 root styled-icon sc-fMiknA hONqXD"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-803"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    className="MuiCollapse-container-798 collapse-container"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-800"
    >
      <div
        className="MuiCollapse-wrapperInner-801"
      >
        <div
          className="MuiExpansionPanelDetails-root-802"
        >
          <p
            className="MuiTypography-root-747 MuiTypography-body2-755"
            style={
              Object {
                "fontSize": "1.6rem",
              }
            }
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Suspendisse malesuada lacus ex, sit amet blandit leo lobortis
eget.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Headings|H1 default 1`] = `
<h1
  className="sc-kgoBCf dqMhJZ"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H1 HEADER TEXT
</h1>
`;

exports[`Storyshots Headings|H2 default 1`] = `
<h2
  className="sc-kGXeez fxVvND"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H2 HEADER TEXT
</h2>
`;

exports[`Storyshots Headings|H3 default 1`] = `
<h3
  className="sc-kpOJdX cfnwxo"
  style={
    Object {
      "color": "#464A53",
    }
  }
>
  H3 HEADER TEXT
</h3>
`;

exports[`Storyshots Icons|TooltipIcon content 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-1115 root sc-dxgOiQ VgHrb styled-icon sc-caSCKo kxVCcU"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
  />
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Icons|TooltipIcon default 1`] = `
<svg
  aria-describedby={null}
  aria-hidden="true"
  className="MuiSvgIcon-root-1098 root sc-dxgOiQ VgHrb styled-icon sc-fAjcbJ gjkcpF"
  focusable="false"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  role="presentation"
  title={null}
  viewBox="0 0 24 24"
>
  <path
    d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z"
  />
  <path
    d="M0 0h24v24H0V0z"
    fill="none"
  />
</svg>
`;

exports[`Storyshots Inputs|CurrencyInput default 1`] = `
<div
  className="MuiFormControl-root-638 root MuiFormControl-marginNormal-639 sc-hMqMXs pVjPw sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-655 MuiOutlinedInput-root-642 base-input MuiInputBase-formControl-656 MuiInputBase-adornedStart-659 MuiOutlinedInput-adornedStart-645"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-672 MuiOutlinedInput-notchedOutline-649 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-673"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <div
      className="MuiInputAdornment-root-674 MuiInputAdornment-positionStart-676"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-679 root styled-icon sc-kEYyzF fywZiy"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-665 MuiOutlinedInput-input-650 input MuiInputBase-inputType-668 MuiInputBase-inputAdornedStart-670 MuiOutlinedInput-inputAdornedStart-653"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      required={false}
      type="number"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|CurrencyInput helper text 1`] = `
<div
  className="MuiFormControl-root-688 root MuiFormControl-marginNormal-689 sc-hMqMXs pVjPw sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-705 MuiOutlinedInput-root-692 base-input MuiInputBase-formControl-706 MuiInputBase-adornedStart-709 MuiOutlinedInput-adornedStart-695"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-722 MuiOutlinedInput-notchedOutline-699 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-723"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <div
      className="MuiInputAdornment-root-724 MuiInputAdornment-positionStart-726"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-729 root styled-icon sc-kEYyzF fywZiy"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </div>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-715 MuiOutlinedInput-input-700 input MuiInputBase-inputType-718 MuiInputBase-inputAdornedStart-720 MuiOutlinedInput-inputAdornedStart-703"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="0.00"
      required={false}
      type="number"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-738 helper MuiFormHelperText-contained-742"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|CurrencyInput label 1`] = `
Array [
  <div
    className="sc-hMqMXs pVjPw sc-dxgOiQ eSKtOy"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-746 root MuiFormControl-marginNormal-747 sc-hMqMXs pVjPw sc-eNQAEJ hjuxtB"
  >
    <div
      className="MuiInputBase-root-763 MuiOutlinedInput-root-750 base-input MuiInputBase-formControl-764 MuiInputBase-adornedStart-767 MuiOutlinedInput-adornedStart-753"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-780 MuiOutlinedInput-notchedOutline-757 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-781"
          style={
            Object {
              "width": 0,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <div
        className="MuiInputAdornment-root-782 MuiInputAdornment-positionStart-784"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-787 root styled-icon sc-kEYyzF fywZiy"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-773 MuiOutlinedInput-input-758 input MuiInputBase-inputType-776 MuiInputBase-inputAdornedStart-778 MuiOutlinedInput-inputAdornedStart-761"
        disabled={false}
        min={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="0.00"
        required={false}
        type="number"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|NumberInput default 1`] = `
<div
  className="MuiFormControl-root-796 root MuiFormControl-marginNormal-797 sc-kkGfuU hCjPhk sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-813 MuiOutlinedInput-root-800 base-input MuiInputBase-formControl-814"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-830 MuiOutlinedInput-notchedOutline-807 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-831"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-823 MuiOutlinedInput-input-808 input MuiInputBase-inputType-826"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="123"
      required={false}
      type="number"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|NumberInput helper text 1`] = `
<div
  className="MuiFormControl-root-832 root MuiFormControl-marginNormal-833 sc-kkGfuU hCjPhk sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-849 MuiOutlinedInput-root-836 base-input MuiInputBase-formControl-850"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-866 MuiOutlinedInput-notchedOutline-843 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-867"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-859 MuiOutlinedInput-input-844 input MuiInputBase-inputType-862"
      disabled={false}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="123"
      required={false}
      type="number"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-868 helper MuiFormHelperText-contained-872"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|NumberInput label 1`] = `
Array [
  <div
    className="sc-kkGfuU hCjPhk sc-dxgOiQ eSKtOy"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-876 root MuiFormControl-marginNormal-877 sc-kkGfuU hCjPhk sc-eNQAEJ hjuxtB"
  >
    <div
      className="MuiInputBase-root-893 MuiOutlinedInput-root-880 base-input MuiInputBase-formControl-894"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-910 MuiOutlinedInput-notchedOutline-887 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-911"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-903 MuiOutlinedInput-input-888 input MuiInputBase-inputType-906"
        disabled={false}
        min={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="123"
        required={false}
        type="number"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|PasswordInput default 1`] = `
<div
  className="MuiFormControl-root-912 formControl MuiFormControl-marginNormal-913 sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-929 MuiOutlinedInput-root-916 base-input MuiInputBase-formControl-930 MuiInputBase-adornedEnd-934 MuiOutlinedInput-adornedEnd-920"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-946 MuiOutlinedInput-notchedOutline-923 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-947"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-939 MuiOutlinedInput-input-924 input MuiInputBase-inputType-942 MuiInputBase-inputAdornedEnd-945 MuiOutlinedInput-inputAdornedEnd-928"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      required={false}
      type="password"
      value={null}
    />
    <div
      className="MuiInputAdornment-root-948 MuiInputAdornment-positionEnd-951"
    >
      <div
        className="MuiInputAdornment-root-948 MuiInputAdornment-positionEnd-951"
      >
        <button
          aria-label="Toggle Password Visibility"
          className="MuiButtonBase-root-959 MuiIconButton-root-953 sc-iAyFgw bUcqYc"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-958"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-962 root styled-icon sc-eHgmQL gcRwue"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-971"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs|PasswordInput helper text 1`] = `
<div
  className="MuiFormControl-root-978 formControl MuiFormControl-marginNormal-979 sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-995 MuiOutlinedInput-root-982 base-input MuiInputBase-formControl-996 MuiInputBase-adornedEnd-1000 MuiOutlinedInput-adornedEnd-986"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1012 MuiOutlinedInput-notchedOutline-989 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1013"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1005 MuiOutlinedInput-input-990 input MuiInputBase-inputType-1008 MuiInputBase-inputAdornedEnd-1011 MuiOutlinedInput-inputAdornedEnd-994"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder"
      required={false}
      type="password"
      value={null}
    />
    <div
      className="MuiInputAdornment-root-1014 MuiInputAdornment-positionEnd-1017"
    >
      <div
        className="MuiInputAdornment-root-1014 MuiInputAdornment-positionEnd-1017"
      >
        <button
          aria-label="Toggle Password Visibility"
          className="MuiButtonBase-root-1025 MuiIconButton-root-1019 sc-iAyFgw bUcqYc"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-1024"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-1028 root styled-icon sc-eHgmQL gcRwue"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-1045"
          />
        </button>
      </div>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-1037 helper MuiFormHelperText-contained-1041"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|PasswordInput label 1`] = `
Array [
  <div
    className="sc-dxgOiQ eSKtOy"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1052 formControl MuiFormControl-marginNormal-1053 sc-eNQAEJ hjuxtB"
  >
    <div
      className="MuiInputBase-root-1069 MuiOutlinedInput-root-1056 base-input MuiInputBase-formControl-1070 MuiInputBase-adornedEnd-1074 MuiOutlinedInput-adornedEnd-1060"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1086 MuiOutlinedInput-notchedOutline-1063 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1087"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1079 MuiOutlinedInput-input-1064 input MuiInputBase-inputType-1082 MuiInputBase-inputAdornedEnd-1085 MuiOutlinedInput-inputAdornedEnd-1068"
        disabled={false}
        min={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder"
        required={false}
        type="password"
        value={null}
      />
      <div
        className="MuiInputAdornment-root-1088 MuiInputAdornment-positionEnd-1091"
      >
        <div
          className="MuiInputAdornment-root-1088 MuiInputAdornment-positionEnd-1091"
        >
          <button
            aria-label="Toggle Password Visibility"
            className="MuiButtonBase-root-1099 MuiIconButton-root-1093 sc-iAyFgw bUcqYc"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-1098"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-1102 root styled-icon sc-eHgmQL gcRwue"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                />
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-1111"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Inputs|TextInput default 1`] = `
<div
  className="MuiFormControl-root-1118 formControl MuiFormControl-marginNormal-1119 sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-1135 MuiOutlinedInput-root-1122 base-input MuiInputBase-formControl-1136"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1152 MuiOutlinedInput-notchedOutline-1129 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1153"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1145 MuiOutlinedInput-input-1130 input"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder text"
      required={false}
      type="text"
      value={null}
    />
  </div>
</div>
`;

exports[`Storyshots Inputs|TextInput helper text 1`] = `
<div
  className="MuiFormControl-root-1154 formControl MuiFormControl-marginNormal-1155 sc-eNQAEJ hjuxtB"
>
  <div
    className="MuiInputBase-root-1171 MuiOutlinedInput-root-1158 base-input MuiInputBase-formControl-1172"
    onClick={[Function]}
  >
    <fieldset
      aria-hidden={true}
      className="MuiPrivateNotchedOutline-root-1188 MuiOutlinedInput-notchedOutline-1165 outline"
      style={
        Object {
          "paddingLeft": 8,
        }
      }
    >
      <legend
        className="MuiPrivateNotchedOutline-legend-1189"
        style={
          Object {
            "width": 0.01,
          }
        }
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1181 MuiOutlinedInput-input-1166 input"
      disabled={false}
      min={null}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="placeholder text"
      required={false}
      type="text"
      value={null}
    />
  </div>
  <p
    className="MuiFormHelperText-root-1190 helper MuiFormHelperText-contained-1194"
  >
    helper text
  </p>
</div>
`;

exports[`Storyshots Inputs|TextInput label 1`] = `
Array [
  <div
    className="sc-dxgOiQ eSKtOy"
  >
    <span>
      label text
    </span>
  </div>,
  <div
    className="MuiFormControl-root-1198 formControl MuiFormControl-marginNormal-1199 sc-eNQAEJ hjuxtB"
  >
    <div
      className="MuiInputBase-root-1215 MuiOutlinedInput-root-1202 base-input MuiInputBase-formControl-1216"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-1232 MuiOutlinedInput-notchedOutline-1209 outline"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-1233"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-1225 MuiOutlinedInput-input-1210 input"
        disabled={false}
        min={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="placeholder text"
        required={false}
        type="text"
        value={null}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Links|BaseLink default 1`] = `
<a
  className="sc-cvbbAY bwcORf"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|BaseLink icon 1`] = `
<a
  className="sc-cvbbAY bwcORf"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1124 root styled-icon sc-gisBJw cnDOiT"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink default 1`] = `
<a
  className="sc-jWBwVP bofprf sc-cvbbAY bwcORf"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  LABEL TEXT
</a>
`;

exports[`Storyshots Links|GhostButtonLink icon 1`] = `
<a
  className="sc-jWBwVP bofprf sc-cvbbAY bwcORf"
  classes={
    Object {
      "root": "link",
    }
  }
  href="/path"
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="MuiSvgIcon-root-1133 root styled-icon sc-kjoXOD lgmMkv"
    focusable="false"
    role="presentation"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  LABEL TEXT
</a>
`;

exports[`Storyshots List Items|ListItem button 1`] = `
<div
  className="MuiButtonBase-root-1208 MuiListItem-root-1196 MuiListItem-default-1199 MuiListItem-gutters-1204 MuiListItem-button-1205"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiListItemText-root-1211 item-text"
  >
    <span
      className="MuiTypography-root-1217 MuiTypography-body1-1226 MuiListItemText-primary-1214"
    >
      List Item Text
    </span>
  </div>
  <span
    className="MuiTouchRipple-root-1253"
  />
</div>
`;

exports[`Storyshots List Items|ListItem default 1`] = `
<li
  className="MuiListItem-root-1142 MuiListItem-default-1145 MuiListItem-gutters-1150"
  disabled={false}
>
  <div
    className="MuiListItemText-root-1154 item-text"
  >
    <span
      className="MuiTypography-root-1160 MuiTypography-body1-1169 MuiListItemText-primary-1157"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem disabled 1`] = `
<li
  className="MuiListItem-root-1260 MuiListItem-default-1263 MuiListItem-gutters-1268 MuiListItem-disabled-1266"
  disabled={true}
>
  <div
    className="MuiListItemText-root-1272 item-text"
  >
    <span
      className="MuiTypography-root-1278 MuiTypography-body1-1287 MuiListItemText-primary-1275"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem icon 1`] = `
<li
  className="MuiListItem-root-1314 MuiListItem-default-1317 MuiListItem-gutters-1322"
  disabled={false}
  onClick={[Function]}
>
  <div
    className="MuiListItemText-root-1326 item-text"
  >
    <span
      className="MuiTypography-root-1332 MuiTypography-body1-1341 MuiListItemText-primary-1329"
    >
      List Item Text
    </span>
  </div>
  <div
    className="MuiListItemIcon-root-1368"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-1369 root styled-icon sc-cHGsZl hhZRML"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
</li>
`;

exports[`Storyshots List Items|ListItem selected 1`] = `
<li
  className="MuiListItem-root-1378 MuiListItem-default-1381 MuiListItem-gutters-1386 MuiListItem-selected-1389"
  disabled={false}
>
  <div
    className="MuiListItemText-root-1390 item-text"
  >
    <span
      className="MuiTypography-root-1396 MuiTypography-body1-1405 MuiListItemText-primary-1393"
    >
      List Item Text
    </span>
  </div>
</li>
`;

exports[`Storyshots Loading Indicators|LoadingIndicator default 1`] = `
<div
  className="sc-brqgnP fKBTxP"
>
  <section
    className="sc-jDwBTQ dBmXCV"
  >
    <div
      className="sc-TOsTZ iKlcKq"
    />
    <div
      className="sc-kgAjT bIgZjb"
    />
    <div
      className="sc-cJSrbW lfEUdy"
    />
    <div
      className="sc-ksYbfQ hKjHGt"
    />
    <div
      className="sc-hmzhuo NTzmv"
    />
    <div
      className="sc-frDJqD bJbCQq"
    />
    <div
      className="sc-kvZOFW ixmDie"
    />
    <div
      className="sc-hqyNC ejIKrD"
    />
    <div
      className="sc-jbKcbu fFRMjn"
    />
    <div
      className="sc-dNLxif cEgmaj"
    />
    <div
      className="sc-jqCOkK dZXPAQ"
    />
    <div
      className="sc-uJMKN smQgA"
    />
  </section>
</div>
`;

exports[`Storyshots Loading Indicators|SmallLoadingIndicator default 1`] = `
<span
  className="sc-cMljjf eDznTh"
>
  <span
    className="sc-jAaTju bdAFbg"
  >
    <div
      className="sc-bbmXgH lpngoW"
    />
    <div
      className="sc-gGBfsJ fwhtk"
    />
    <div
      className="sc-jnlKLf kxziOz"
    />
    <div
      className="sc-fYxtnH choODs"
    />
    <div
      className="sc-tilXH bCgemY"
    />
    <div
      className="sc-hEsumM dMDcjx"
    />
    <div
      className="sc-ktHwxA gZOpPC"
    />
    <div
      className="sc-cIShpX jLkOyY"
    />
    <div
      className="sc-kafWEX fTpGyz"
    />
    <div
      className="sc-feJyhm jFmaAu"
    />
    <div
      className="sc-iELTvK chJLLd"
    />
    <div
      className="sc-cmTdod fduDCO"
    />
  </span>
</span>
`;

exports[`Storyshots Paper|BasePaper default 1`] = `
<div
  className="MuiPaper-root-1432 MuiPaper-elevation2-1436 MuiPaper-rounded-1433 sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|BasePaper image 1`] = `
<div
  className="MuiPaper-root-1459 MuiPaper-elevation2-1463 MuiPaper-rounded-1460 sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper default 1`] = `
<div
  className="MuiPaper-root-1486 MuiPaper-elevation2-1490 MuiPaper-rounded-1487 sc-hSdWYo fXbWxY sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    paper text
  </div>
</div>
`;

exports[`Storyshots Paper|InsetPaper image 1`] = `
<div
  className="MuiPaper-root-1513 MuiPaper-elevation2-1517 MuiPaper-rounded-1514 sc-hSdWYo fXbWxY sc-iAyFgw fmaDgc"
>
  <div
    style={
      Object {
        "padding": "2rem",
      }
    }
  >
    <img
      alt="placeholder"
      src="imagePlaceholder.svg"
      style={
        Object {
          "width": "10rem",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup default 1`] = `
<div
  className="MuiFormControl-root-1540 form"
  disableRipple={false}
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-1544 group"
    disableRipple={false}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-1546 sc-eHgmQL blxTht"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-1567 MuiIconButton-root-1561 MuiPrivateSwitchBase-root-1557 MuiRadio-root-1552 radio MuiRadio-colorSecondary-1556 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-1566"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1570"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1560"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
        <span
          className="MuiTouchRipple-root-1615"
        />
      </span>
      <span
        className="MuiTypography-root-1579 MuiTypography-body2-1587 MuiFormControlLabel-label-1551 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1546 sc-eHgmQL blxTht"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-1567 MuiIconButton-root-1561 MuiPrivateSwitchBase-root-1557 MuiRadio-root-1552 radio MuiRadio-colorSecondary-1556 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-1566"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1570"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1560"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
        <span
          className="MuiTouchRipple-root-1615"
        />
      </span>
      <span
        className="MuiTypography-root-1579 MuiTypography-body2-1587 MuiFormControlLabel-label-1551 label"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1546 sc-eHgmQL blxTht"
      disableRipple={false}
    >
      <span
        className="MuiButtonBase-root-1567 MuiIconButton-root-1561 MuiPrivateSwitchBase-root-1557 MuiRadio-root-1552 radio MuiRadio-colorSecondary-1556 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-1566"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1570"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1560"
            disabled={false}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
        <span
          className="MuiTouchRipple-root-1615"
        />
      </span>
      <span
        className="MuiTypography-root-1579 MuiTypography-body2-1587 MuiFormControlLabel-label-1551 label"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Radio|RadioButtonGroup disabled 1`] = `
<div
  className="MuiFormControl-root-1622 form"
  labelPlacement="end"
>
  <div
    className="MuiFormGroup-root-1626 group"
    disabled={true}
    labelPlacement="end"
    role="radiogroup"
  >
    <label
      className="MuiFormControlLabel-root-1628 MuiFormControlLabel-disabled-1632 sc-eHgmQL blxTht"
    >
      <span
        className="MuiButtonBase-root-1649 MuiButtonBase-disabled-1650 MuiIconButton-root-1643 MuiIconButton-disabled-1647 MuiPrivateSwitchBase-root-1639 MuiRadio-root-1634 radio MuiRadio-colorSecondary-1638 MuiPrivateSwitchBase-disabled-1641 MuiRadio-disabled-1636 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-1648"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1652"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1642"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-1"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-1661 MuiTypography-body2-1669 MuiFormControlLabel-label-1633 label MuiFormControlLabel-disabled-1632"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1628 MuiFormControlLabel-disabled-1632 sc-eHgmQL blxTht"
    >
      <span
        className="MuiButtonBase-root-1649 MuiButtonBase-disabled-1650 MuiIconButton-root-1643 MuiIconButton-disabled-1647 MuiPrivateSwitchBase-root-1639 MuiRadio-root-1634 radio MuiRadio-colorSecondary-1638 MuiPrivateSwitchBase-disabled-1641 MuiRadio-disabled-1636 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-1648"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1652"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1642"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-2"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-1661 MuiTypography-body2-1669 MuiFormControlLabel-label-1633 label MuiFormControlLabel-disabled-1632"
      >
        LABEL TEXT
      </span>
    </label>
    <label
      className="MuiFormControlLabel-root-1628 MuiFormControlLabel-disabled-1632 sc-eHgmQL blxTht"
    >
      <span
        className="MuiButtonBase-root-1649 MuiButtonBase-disabled-1650 MuiIconButton-root-1643 MuiIconButton-disabled-1647 MuiPrivateSwitchBase-root-1639 MuiRadio-root-1634 radio MuiRadio-colorSecondary-1638 MuiPrivateSwitchBase-disabled-1641 MuiRadio-disabled-1636 sc-cvbbAY cvGIOr"
        labelPlacement="end"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-1648"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-1652"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            checked={false}
            className="MuiPrivateSwitchBase-input-1642"
            disabled={true}
            onChange={[Function]}
            type="radio"
            value="label-text-3"
          />
        </span>
      </span>
      <span
        className="MuiTypography-root-1661 MuiTypography-body2-1669 MuiFormControlLabel-label-1633 label MuiFormControlLabel-disabled-1632"
      >
        LABEL TEXT
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Tables|BaseTable default 1`] = `
<table
  className="MuiTable-root-1697 sc-jWBwVP ksZpXa"
>
  <thead
    className="MuiTableHead-root-1698 sc-cMljjf cgnUiz"
  >
    <tr
      className="MuiTableRow-root-1699 MuiTableRow-head-1702 sc-jDwBTQ gHKCKC"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-head-1705 sc-jAaTju lltWEt"
        iscentered={0}
        scope="col"
      >
        Dessert
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-head-1705 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Calories
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-head-1705 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Fat (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-head-1705 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Carbs (g)
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-head-1705 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        Protein (g)
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-1716 sc-brqgnP hzFcas"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-1699 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Cupcake
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        305
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        67
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1699 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Eclair
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        262
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        6
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1699 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Gingerbread
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        356
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        16
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        49
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1699 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju lltWEt"
        iscentered={0}
      >
        Ice Cream
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        207
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        11
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        24
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1704 MuiTableCell-body-1706 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        4
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Tables|BaseTable offset 1`] = `
<table
  className="MuiTable-root-1717 sc-jWBwVP ksZpXa"
>
  <thead
    className="MuiTableHead-root-1718 sc-cMljjf cgnUiz"
  >
    <tr
      className="MuiTableRow-root-1719 MuiTableRow-head-1722 sc-jDwBTQ gHKCKC"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-head-1725 sc-jAaTju lltWEt"
        iscentered={0}
        scope="col"
      >
        
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-head-1725 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        column one
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-head-1725 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        column two
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-head-1725 sc-jAaTju dkrgEy"
        iscentered={1}
        scope="col"
      >
        column three
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root-1736 sc-brqgnP hzFcas"
    hovercolor="#F8F8F8"
  >
    <tr
      className="MuiTableRow-root-1719 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row one
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        01-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        01-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        01-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1719 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row two
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        02-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        02-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        02-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1719 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row three
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        03-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        03-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        03-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1719 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row four
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        04-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        04-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        04-03
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-1719 sc-jDwBTQ gHKCKC"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju lltWEt"
        iscentered={0}
      >
        row five
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        05-01
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        05-02
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-1724 MuiTableCell-body-1726 sc-jAaTju dkrgEy"
        iscentered={1}
      >
        05-03
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots TextField|TextField autoFocus 1`] = `
<div
  className="MuiFormControl-root-1789 root sc-gPEVay hYyPwW"
  color="#310078"
>
  <label
    className="MuiFormLabel-root-1804 MuiInputLabel-root-1793 MuiInputLabel-formControl-1798 MuiInputLabel-animated-1801 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1824 MuiInput-root-1811 MuiInput-underline-1815 MuiInputBase-formControl-1825 MuiInput-formControl-1812"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoFocus={true}
      className="MuiInputBase-input-1834 MuiInput-input-1819"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder text"
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextField|TextField default 1`] = `
<div
  className="MuiFormControl-root-1737 root sc-gPEVay hYyPwW"
  color="#310078"
>
  <label
    className="MuiFormLabel-root-1752 MuiInputLabel-root-1741 MuiInputLabel-formControl-1746 MuiInputLabel-animated-1749 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1772 MuiInput-root-1759 MuiInput-underline-1763 MuiInputBase-formControl-1773 MuiInput-formControl-1760"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1782 MuiInput-input-1767"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextField|TextField disabled 1`] = `
<div
  className="MuiFormControl-root-1841 root sc-gPEVay hYyPwW"
>
  <label
    className="MuiFormLabel-root-1856 MuiFormLabel-disabled-1858 MuiInputLabel-disabled-1847 MuiInputLabel-root-1845 MuiInputLabel-formControl-1850 MuiInputLabel-animated-1853 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1876 MuiInput-root-1863 MuiInput-underline-1867 MuiInputBase-disabled-1879 MuiInput-disabled-1866 MuiInputBase-formControl-1877 MuiInput-formControl-1864"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1886 MuiInput-input-1871 MuiInputBase-disabled-1879 MuiInput-disabled-1866"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder text"
      required={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextField|TextField multiline 1`] = `
<div
  className="MuiFormControl-root-1893 root sc-gPEVay hYyPwW"
  color="#310078"
>
  <label
    className="MuiFormLabel-root-1908 MuiInputLabel-root-1897 MuiInputLabel-formControl-1902 MuiInputLabel-animated-1905 label"
    data-shrink={false}
  >
    Text Field Label
  </label>
  <div
    className="MuiInputBase-root-1928 MuiInput-root-1915 MuiInput-underline-1919 MuiInputBase-formControl-1929 MuiInput-formControl-1916 MuiInputBase-multiline-1936 MuiInput-multiline-1921"
    onClick={[Function]}
  >
    <div
      className="MuiPrivateTextarea-root-1945"
    >
      <textarea
        aria-hidden="true"
        className="MuiPrivateTextarea-textarea-1946 MuiPrivateTextarea-shadow-1947"
        readOnly={true}
        rows="1"
        tabIndex={-1}
        value=""
      />
      <textarea
        aria-hidden="true"
        className="MuiPrivateTextarea-textarea-1946 MuiPrivateTextarea-shadow-1947"
        readOnly={true}
        rows={4}
        tabIndex={-1}
      />
      <textarea
        aria-invalid={false}
        className="MuiPrivateTextarea-textarea-1946 MuiInputBase-input-1938 MuiInput-input-1923 MuiInputBase-inputMultiline-1940 MuiInput-inputMultiline-1925"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        rows={4}
        style={
          Object {
            "height": 76,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TextField|TextField placeholder 1`] = `
<div
  className="MuiFormControl-root-1948 root sc-gPEVay hYyPwW"
  color="#310078"
>
  <div
    className="MuiInputBase-root-1965 MuiInput-root-1952 MuiInput-underline-1956 MuiInputBase-formControl-1966 MuiInput-formControl-1953"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-1975 MuiInput-input-1960"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Placeholder text"
      required={false}
      type="text"
    />
  </div>
</div>
`;
